Meta: Improved build.xml and cleanup the repo tree.

--- a/pGroupeAB02/build.xml
+++ b/pGroupeAB02/build.xml
@@ -5,18 +5,17 @@
             <include name="**/*.zip"/>
         </fileset>
     </path>
+
     <target name="clean">
         <delete dir="out/"/>
     </target>
 
-    <target name="compile">
+    <target name="run">
         <mkdir dir="out/classes"/>
         <javac srcdir="src" destdir="out/classes">
             <classpath refid="build.classpath"/>
         </javac>
-    </target>
 
-    <target name="jar">
         <mkdir dir="out/jar"/>
         <jar destfile="out/jar/application.jar" basedir="out/classes">
             <fileset dir="src/"/>
@@ -24,10 +23,7 @@
                 <attribute name="Main-Class" value="utils.Main"/>
             </manifest>
         </jar>
-    </target>
 
-    <target name="run">
-        <java jar="out/jar/HelloWorld.jar" fork="true"/>
+        <java jar="out/jar/application.jar" fork="true"/>
     </target>
-
 </project>
