Build: Include all libs in the jar.

--- a/pGroupeAB02/build.xml
+++ b/pGroupeAB02/build.xml
@@ -19,6 +19,7 @@
         <mkdir dir="out/jar"/>
         <jar destfile="out/jar/application.jar" basedir="out/classes">
             <fileset dir="src/"/>
+            <zipgroupfileset dir="lib" includes="*.jar"/>
             <manifest>
                 <attribute name="Main-Class" value="utils.Main"/>
             </manifest>
