--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+
+.vscode/
+pGroupeAB02/data/settings.json
