MainGame: Added pass button.

--- a/pGroupeAB02/settings.json
+++ b/pGroupeAB02/settings.json
@@ -1,5 +1,5 @@
 {
-  "audioMuted": true,
-  "audioMusicVolume": 0.0972222222222222,
-  "audioEffectVolume": 0.18611111111111112
+  "audioMuted": false,
+  "audioMusicVolume": 0.026842256764536554,
+  "audioEffectVolume": 0.11098157743235465
 }
