Meta: Update .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ cmake-build-*/
 
 # IntelliJ
 out/
-.idea/artifact/ 
+.idea/artifact/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -98,4 +98,5 @@ fabric.properties
 
 
 .vscode/
-settings.json
+pGroupeAB02/settings.json
+pGroupeAB02/questions.json
